Switch to JavaFX